Full page layout

--- a/app/components/topnav/TopNav.scss
+++ b/app/components/topnav/TopNav.scss
@@ -1,6 +1,7 @@
 .navigation {
   background-color: var(--nav-background);
   color: var(--nav-color);
+  border-bottom: 1px solid var(--nav-border);
 }
 
 .title {
