--- a/app/styles/colors.scss
+++ b/app/styles/colors.scss
@@ -41,7 +41,7 @@
 
   --nav-background: white;
   --nav-color: black;
-  --nav-border: #fee685;
+  --nav-border: #fee6859d;
 
   --nav-icon: #e17100;
   --nav-gradient: linear-gradient(to right, #d97706, #ea580c);
