--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -25,6 +25,8 @@ body {
   flex: 1;
   display: flex;
   flex-direction: column;
+  padding: clamp(1rem, 5%, 6rem);
+  padding-top: 1rem;
 }
 
 .site-footer {
