Full logic for album actions
Albums cannot be in the wishlist and collection at the same time. Added logic so when a button is in the collection, the collection button is disabled. When a button is in the wishlist, the collection button can move it to the wishlist and the wishlist button is disabled.

A album can now be moved from the wishlist to the collection.

Modals to confirm actions are added for sensitive actions

--- a/app/components/albums/card/AlbumCard.scss
+++ b/app/components/albums/card/AlbumCard.scss
@@ -20,6 +20,13 @@
       color: var(--rose-red);
       fill: var(--rose-red);
     }
+
+    &__icon {
+      &__disabled {
+        color: var(--rose-red);
+        fill: var(--rose-red);
+      }
+    }
   }
 
   &__remove {
