--- a/app/styles/colors.scss
+++ b/app/styles/colors.scss
@@ -7,6 +7,8 @@
   /* Base colors */
   --muted-black: #717182;
 
+  --white-black: white;
+
   --soft-amber: #fef3c7;
   --medium-amber: #ffeab5;
   --hard-amber: #92400e;
@@ -65,6 +67,8 @@
 .dark {
   --background: linear-gradient(to bottom right, #111827, #111827, #1a110d);
   --foreground: #ededed;
+
+  --white-black: black;
 
   --auth-body-background: linear-gradient(
     to bottom right,
