--- a/app/wishlist/wishlist.scss
+++ b/app/wishlist/wishlist.scss
@@ -10,4 +10,8 @@
   &__count {
     color: var(--muted-black);
   }
+
+  .wishlist-group-line {
+    background-color: var(--group-separator);
+  }
 }
