--- a/app/collection/collection.scss
+++ b/app/collection/collection.scss
@@ -10,4 +10,8 @@
   &__count {
     color: var(--muted-black);
   }
+
+  .collection-group-line {
+    background-color: var(--group-separator);
+  }
 }
